# caxe

./: .codacy.yml  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHILOSOPHY.md  PR_STABILIZATION_CHECKLIST.md  README.md  SECURITY.md  install.ps1  install.sh  registry.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: main_benchmark.rs
src/: builder.rs  cache.rs  ci.rs  config.rs  deps.rs  doc.rs  docker.rs  ide.rs  import.rs  lib.rs  lock.rs  main.rs  package.rs  registry.rs  stats.rs  templates.rs  tree.rs  ui.rs  upgrade.rs
src/checker/: mod.rs
src/commands/: doctor.rs  framework.rs  generate.rs  mod.rs  target.rs  toolchain.rs
src/toolchain/: install.rs  mod.rs  types.rs  windows.rs
tests/: cli_framework_target.rs  integration_test.rs  post_build_failure.rs
