[package]
name = "caxe"
version = "0.3.9"
edition = "2024"
description = "A modern C/C++ project manager that cuts through build system complexity. Zero config, smart dependencies, and parallel builds."
authors = ["Dhimas Ardinata dhimasardinatapp@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dhimasardinata/caxe"
readme = "README.md"
keywords = ["cpp", "build-tool", "package-manager", "c", "make"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "cx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.6.0"
colored = "3.1.1"
console = "0.16.3"
dirs = "6.0.0"
git2 = { version = "0.20.4", features = ["vendored-openssl"] }
indicatif = "0.18.4"
inquire = "0.9.4"
notify = "8.2.0"
rayon = "1.11.0"
rhai = "1.24.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
ureq = { version = "3.3", features = ["json"] }
walkdir = "2.5.0"
regex = "1.12"
sha2 = "0.11"
zip = "8.5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[[bench]]
name = "main_benchmark"
harness = false
